--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,17 @@ i{
     font-size: 25px;
 }
 
+
+
+header{
+    background: linear-gradient(110deg,yellow 40%, pink 40%);
+}
+
+section{
+    background: lightgrey;
+}
+
+footer{
+    background: black;
+    color: white;
+}
