--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,16 @@ footer{
     background: black;
     color: white;
 }
+
+div{
+    text-align:center;
+    padding: 40px;
+}
+
+h3{
+    border: 2px solid white;
+    font-size: 45px;
+    padding: 15px;
+    margin: auto;
+    max-width: 400px;
+}
